# OrderSync

./: .gitignore  README
OrderDbSync/: CMakeLists.txt
OrderDbSync/etc/: server.ini
OrderDbSync/inc/: ConfigDef.h  MysqlHelper.h  SyncFunc.h
OrderDbSync/src/: ConfigDef.cc  Log.cc  Main.cc  MysqlHelper.cc  RedisHelper.cc  SyncFunc.cc
OrderSyncClient/: CMakeLists.txt  OrderSyncClient.vpj  OrderSyncClient.vpw  OrderSyncClient.vpwhist  OrderSyncClient.vtg
OrderSyncClient/etc/: server.ini
OrderSyncClient/inc/: IniFile.h  MysqlHelper.h  RedisHelper.h  TcpClient.h  conf.h  fetcher.h  log.h  order_sync_client.h  packet.h  poller.h
OrderSyncClient/src/: MysqlHelper.cc  RedisHelper.cc  TcpClient.cc  fetcher.cc  log.cc  main.cc  order_sync_client.cc  packet.cc  poller.cc
OrderSyncServer/conf/: config.xml  server.xml
OrderSyncServer/src/core/: log.cpp  net.cpp  poller.cpp
OrderSyncServer/src/include/: log.h  mempool.h  poller.h
OrderSyncServer/src/proxy/: CHelper_pool.h  EncryptDecrypt.cpp  ICHAT_PacketBase.h  Makefile.proxy  cache.cpp  clib_log.cpp  clib_log.h  client_unit.cpp  client_unit.h  decode_unit.cpp  defs.h  game_unit.cpp  global.cpp  global.h  helper_unit.cpp  incoming.cpp  incoming.h  proxy_module.cpp  redis_helper.cc  redis_helper.h
doc/: json_order.txt  paycenter_order (2).sql  分表格式.txt  订单同步系统.ppt
